src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarker_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarker_StringErrorContext.class */
public final class EXTDebugMarker_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglInsertEventMarkerEXT(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarkerErrorContext");
        methods.put("glInsertEventMarkerEXT(Ljava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarkerErrorContext");
        methods.put("glInsertEventMarkerEXT(Ljava/lang/CharSequence;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarkerErrorContext");
        methods.put("nglPushGroupMarkerEXT(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarkerErrorContext");
        methods.put("glPushGroupMarkerEXT(Ljava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarkerErrorContext");
        methods.put("glPushGroupMarkerEXT(Ljava/lang/CharSequence;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarkerErrorContext");
        methods.put("glPopGroupMarkerEXT()V", "net/labymod/core/laby3d/opengl/error/generated/EXTDebugMarkerErrorContext");
        return methods;
    }
}
